# XHS-SPIDER

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_spider.py
redbook/: settings.py  videodownloader.py
redbook/spiders/: xhs.py
samples/: note_image示例.html  note_video示例.html  readme.txt
