[project]
name = "xhs-spider"
version = "0.1.0"
description = "小红书数据爬虫 - 基于Scrapy框架"
requires-python = ">=3.8"
dependencies = [
    "scrapy>=2.8",
    "pymongo>=4.3",
    "requests>=2.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["redbook"]
